# learning_code_1

./: .gitignore  CMakeLists.txt  LICENSE  camera.cpp  camera.h  frag.glsl  geometry.cpp  geometry.h  main.cpp  printers.h  scene.cpp  scene.h  vert.glsl
glad/: glad.h
glad/src/: glad.c
